[NOJIRA-bol-assesment] - logic for move endpoint
