# src/main/java/com/vilda/mancala/mancalaapp/clientapi/controller/MancalaGameController.java
@@ -2,12 +2,15 @@ package com.vilda.mancala.mancalaapp.clientapi.controller;
 
 import com.vilda.mancala.mancalaapp.business.service.MancalaGameService;
 import com.vilda.mancala.mancalaapp.client.spec.api.MancalaClientApi;
+import com.vilda.mancala.mancalaapp.client.spec.model.GameSetupResponse;
 import com.vilda.mancala.mancalaapp.client.spec.model.MancalaBoardSetup;
+import com.vilda.mancala.mancalaapp.client.spec.model.MoveItem;
 import com.vilda.mancala.mancalaapp.client.spec.model.NewGameSetup;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
@@ -18,6 +21,25 @@ public class MancalaGameController implements MancalaClientApi {
     private final MancalaGameService mancalaGameService;
 
     @Override
+    public ResponseEntity<MancalaBoardSetup> makeMoveByPitId(Integer pitIndex, MoveItem moveItem) {
+        return new ResponseEntity<>(mancalaGameService.makeMove(moveItem, pitIndex), HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<MancalaBoardSetup> remakeMoveByPitId(String gameId, String oldPitId, String newPitId) {
+        return null;
+    }
+
+    @Override
+    public ResponseEntity<GameSetupResponse> startGame(NewGameSetup newGameSetup) {
+        log.debug("");
+
+        return ResponseEntity.ok(mancalaGameService.startNewGame(newGameSetup));
+    }
+
+
+
+/*    @Override
     public ResponseEntity<MancalaBoardSetup> makeMoveByPitId(String gameId, Integer pitIndex) {
         return new ResponseEntity<>(mancalaGameService.makeMove(gameId, pitIndex), HttpStatus.OK);
     }
@@ -32,5 +54,5 @@ public class MancalaGameController implements MancalaClientApi {
         log.debug("");
 
         return ResponseEntity.ok(mancalaGameService.startNewGame(newGameSetup));
-    }
+    }*/
 }
